     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                    FaradayCup History file
                    -----------------------

4 November 2014:
- Move tally file populating to SteppingAction (dynamic collection)

2 November 2014:
- Cu/KA netCharge bins (KA linearly proportional)

30 Oct 2014: Shaun Marshall
- Corrected data directory construction

29 Oct 2014: Shaun Marshall
- Cleanup of the working model