@@ -16,7 +16,7 @@
 #
 /gun/particle proton
 /gun/energy 250 MeV
-/run/beamOn 100000
+/run/beamOn 1000
 #
 # 20 events
 #
