@@ -1,12 +1,0 @@
-# Macro file for example B4
-# 
-# To be run preferably in batch, without graphics:
-# % exampleB4[a,b,c,d] run2.mac
-#
-# Default kinemtics: 
-# electron 50 MeV in direction (0.,0.,1.)
-# 1000 events
-#
-/run/printProgress 100
-/run/beamOn 1000
-
