@@ -5,6 +5,9 @@
                     FaradayCup History file
                     -----------------------
 
+4 November 2014:
+- Move tally file populating to SteppingAction (dynamic collection)
+
 2 November 2014:
 - Cu/KA netCharge bins (KA linearly proportional)
 
